--- a/index.html
+++ b/index.html
@@ -2,25 +2,13 @@
 <html>
 <head>
 <title>Space Bird</title>
-<style>
-body {
-  background-color: coral;
-  text-align: center;
-  font-color: black;
-  font-family: Arial, Helvetica, sans-serif;
-}
-div.a {
-  font-size: 25px;
-}
-
-
-</style>
+<link href="css/style.css" type="text/css" rel="stylesheet" />
 </head>
-
-<div align="left" class="a">
+<body>
+<div id="design" align="left" class="a">
 <a href="design.html">Design</a>
 </div>
-<div align="right" class="a">
+<div align="left" class="a">
   <a href="resource.html">Resources</a>
 </div>
 
@@ -28,7 +16,7 @@ div.a {
 
 <h1>Welcome to Space Bird</h1>
 <p>The game will look here</p>
-<img src="img/background.png" alt="b" style="width:3000px">
+<img id="background" src="img/background.png" alt="b"   >
 
 </body>
 </html>
