--- a/index.html
+++ b/index.html
@@ -10,21 +10,32 @@
 </head>
 
 <body>
+  
   <div class="header center-text">
-    <h1> <img src="img/SB_logo_alt2.png" class="logo">StarBird </h1>
+    <h1> <img src="images/SB_logo_alt2.png" style="width:100px;height:100px;display:inline;float:left;margin-left:40px;">StarBird </h1>
   </div>
-
+  <nav>
   <ul class="navbar">
     <li><a class="active" href="index.html">Game</a></li>
     <li><a href="design.html">About</a></li>
-    <li><a href="resources.html">Resources</a></li>
+    <li><a href="resources.html">Resources</a>
+      <ul id="resourceslist">
+        <li><a href="https://github.com/" target="_blank">GitHub</a></li>
+        <li><a href="https://www.piskelapp.com/" target="_blank">Piskel App</a></li>
+        <li><a href="https://www.zybooks.com/" target="_blank">ZyBooks</a></li>
+        <li><a href="https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_cards" target="_blank">W3Schools</a></li>
+      </ul>
+    </li>
   </ul>
-
-  <div class="bird"><img src="img/horizontalBird.gif"></div>
+  </nav>
+  
   <div class="viewer">
-    <div class="sliding-bg">
-      <div class="sliding-asteroid"></div>
+    <div class="sliding-bg" ><img id="bg" src="images/main_bg.png" height="600px">
+      <div class="sliding-asteroid"><img id="as" src="images/asteroid_layer.png">
+        
+      </div>
     </div>
+    <div class="bird"><img src="images/horizontalBird.gif"></div>
   </div>
 
 </body>
